--- a/index.html
+++ b/index.html
@@ -2,59 +2,41 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="E1CP2A1/assets/css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<title> Las Locuras del Emperador</title>
-
-	<style>
-	
-		body{
-			margin: 0px; 
-		}
-		.Cuzcox{
-			background-image: url("cuzco2.jpg");
-			background-size: 100% auto;
-			height: 800px}
-
-	</style>
+	<title>Las Locuras del Emperador</title>
 </head>
 <body>
 
-<div style ="background-color:#cc0033; text-align:center; padding: 0px; font-family: 'El Rio Lobo' ">
+	<div class="bloque_1">
+		<h1 class="h_1">Las Locuras del Emperador!</h1>
+		<p class="p_1">Nuestra primera página web</p>
+	</div>
 
-<h1 style="color:#ffcc33";>Las Locuras del Emperador</h1>
-<p style="color:white">Nuestra primera página web</p>
-</div>
+	<div class="bloque_2">
 
+		<img src="cuzco.jpg" alt="Cuzco">
+	</div>
 
-<div style="background-color:#33ccff ; text-align: center";>
-	
-<img src="cuzco.jpg" alt="Imagen Cuzco">
+	<div class="bloque_3">
+		<div class="parrafo">
+			<h2 class="h_2">Cuzco!!</h2>	
+			<p class="p_2">Ooh, sí...el veneno...</p>
+			<p class="p_2">El veneno que usaremos para matar a Cuszco</p>
+			<p class="p_2">El veneno de Cuzco</p>
+			<p class="p_2">claro...</p>
+			<p class="p_2">Ese veneno</p>
+		</div>
+	</div>
 
-
-</div>
-
-
-<div class="Cuzcox"; style="text-align: right; color: white">
-	
-	<p>Cuzco!!</p>
-<p>Ooh, sí...el veneno...</p>
-<p>El veneno que usaremos para matar a Cuszco</p>
-<p>El veneno de Cuzco</p>
-<p>claro...</p>
-<p>Ese veneno</p>
-
-</div>
-
-<div style="text-align: center;">
-	<ul>
-		<ol>Precios</ol>
-		<ol>10.00</ol>
-		<ol>21.00</ol>
-		<ol>35.00</ol>
-	</ul>
-</div>
-
+	<div class="bloque_4">
+		<p class="p_3">Precios</p>
+		<ul class="ul_1">
+			<ol class="ol_1">- 10.00</ol>
+			<ol class="ol_1">µ 21.00</ol>
+			<ol class="ol_1">© 35.00</ol>
+		</ul>
+	</div>
 
 </body>
 </html>
